# hexgrid-with-spiral-honeycomb-index

./: CMakeLists.txt  README.md
include/: hexagon.h  hexgrid.h  hexindex.h  hexpattern.h  honeycomb.h  point.h
tests/: CMakeLists.txt  catch.hpp  pyplot.h  tests.cpp
